# C99_LIB_N37

./: .gitignore  CMakeLists.txt  Dockerfile  main.c
Exercise/include/Temperature/: celsiusNFahrenheit.h
Exercise/src/Temperature/: celsiusNFahrenheit.c
Test/Console/: CBufferTest.c  CursorTest.c
Test/DataStrctAlgos/: BSTTest.c  NodeTest.c
Test/Integer/: IntegerTest.c
Test/LinkedList/: LList.c
Test/Math/: MathTest.c
Test/String/: StringTest.c
Test/Temperature/: TempConv.c
include/: stdInclude.h
include/Console/: Buffer.h  ctrlFunc.h  ctrlFuncCodedCharSet.h
include/Console/ExtractCtrlFunc/Notebook/: ExtractCode.ipynb  ctrlFuncCodedCharSetStrFrmt.h
include/Console/ExtractCtrlFunc/Notebook/.ipynb_checkpoints/: ExtractCode-checkpoint.ipynb
include/Util/: integer.h  linkedList.h  mathematics.h  string.h
include/Util/String/: snprintf.h  string.h
lib/include/: stdInclude.h
lib/include/Algos/: BinarySearchTree.h
lib/include/Console/: Buffer.h
lib/include/DataStruct/: node.h
lib/include/Util/: fraction.h  integer.h  linkedList.h  mathematics.h
lib/include/Util/String/: string.h
lib/src/Algos/: BinarySearchTree.c  linkedList.c
lib/src/Console/: Buffer.c
lib/src/DataStruct/: node.c
lib/src/Util/: fraction.h  integer.c  linkedList.c  mathematics.c
scripts/: build.sh  reloadCMake.sh
src/Console/: Buffer.c  ctrlFuncCodedCharSet.c  ctrlfunc.c
src/Util/: fraction.h  integer.c  linkedList.c  mathematics.c  strUtl.h  string.c
src/Util/String/: snprintf.c  string.c
